# fastapi-social-media-api

./: README.md  pyproject.toml
app/: database.py
app/main/: main.py
app/models/: post.py  user.py
app/routes/: __init__.py  post.py  user.py
app/schemas/: post.py
app/services/: auth.py
